--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "test": "jest"
   },
   "dependencies": {
     "@prisma/client": "2.0.0-beta.2",
@@ -23,7 +24,9 @@
   },
   "devDependencies": {
     "@prisma/cli": "2.0.0-beta.2",
+    "jest": "26.2.2",
     "nodemon": "2.0.3",
-    "prettier": "2.0.5"
+    "prettier": "2.0.5",
+    "supertest": "4.0.2"
   }
 }
