--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: node_js
 notifications:
   email: false
 script:
-  - npm t
+  - npm run test:coverage
 after_success:
   - bash <(curl -s https://codecov.io/bash)
