--- a/package.json
+++ b/package.json
@@ -12,23 +12,35 @@
     "singleQuote": true
   },
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "start": "node src/start.js",
+    "dev": "nodemon src/start.js",
+    "test": "DATABASE_URL=\"file:./test.db\" jest --runInBand",
+    "test:watch": "npm run test -- --watch",
+    "test:coverage": "npm run test -- --coverage"
   },
   "dependencies": {
-    "@prisma/client": "2.0.0-beta.2",
+    "@prisma/client": "2.4.1",
     "bcryptjs": "2.4.3",
+    "dotenv": "8.2.0",
     "graphql-yoga": "1.18.3",
     "jsonwebtoken": "8.5.1"
   },
   "devDependencies": {
-    "@prisma/cli": "2.0.0-beta.2",
+    "@prisma/cli": "2.4.1",
+    "chance": "1.1.6",
     "jest": "26.2.2",
-    "nodemon": "2.0.3",
+    "nodemon": "2.0.4",
     "prettier": "2.0.5",
+    "subscriptions-transport-ws": "0.9.18",
     "supertest": "4.0.2"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.js",
+      "!src/start.js"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/test-support/setup-tests.js"
+    ]
   }
 }
