--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,13 @@
 {
   "extends": [
-    "config:base"
-  ]
+    "config:js-app",
+    ":rebaseStalePrs",
+    ":automergeAll",
+    ":masterIssue"
+  ],
+  "lockFileMaintenance": {
+    "enabled": true
+  },
+  "prCreation": "not-pending",
+  "stabilityDays": 3
 }
