--- a/package.json
+++ b/package.json
@@ -12,22 +12,22 @@
     "singleQuote": true
   },
   "scripts": {
-    "start": "node src/start.js",
-    "dev": "nodemon src/start.js",
-    "test": "DATABASE_URL=\"file:./test.db\" jest --runInBand",
+    "start": "cross-env DATABASE_URL=file:./dev.db node src/start.js",
+    "dev": "cross-env DATABASE_URL=file:./dev.db nodemon src/start.js",
+    "test": "cross-env DATABASE_URL=file:./test.db jest --runInBand",
     "test:watch": "npm run test -- --watch",
     "test:coverage": "npm run test -- --coverage"
   },
   "dependencies": {
     "@prisma/client": "2.4.1",
     "bcryptjs": "2.4.3",
-    "dotenv": "8.2.0",
     "graphql-yoga": "1.18.3",
     "jsonwebtoken": "8.5.1"
   },
   "devDependencies": {
     "@prisma/cli": "2.4.1",
     "chance": "1.1.7",
+    "cross-env": "7.0.2",
     "jest": "26.4.2",
     "nodemon": "2.0.4",
     "prettier": "2.1.1",
