--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   },
   "scripts": {
     "start": "cross-env DATABASE_URL=file:./dev.db node src/start.js",
-    "dev": "cross-env DATABASE_URL=file:./dev.db nodemon src/start.js",
-    "test": "cross-env-shell DATABASE_URL=file:./test.db \"prisma migrate up -c --experimental && jest -i\"",
+    "dev": "cross-env-shell DATABASE_URL=file:./dev.db nodemon src/start.js",
+    "migrate": "prisma migrate up -c --experimental",
+    "seed": "cross-env-shell DATABASE_URL=file:./dev.db node prisma/seed.js",
+    "test": "cross-env-shell DATABASE_URL=file:./test.db \"npm run migrate && jest -i\"",
     "test:watch": "npm t -- --watchAll",
     "test:coverage": "npm t -- --coverage"
   },
