--- a/renovate.json
+++ b/renovate.json
@@ -8,6 +8,9 @@
   "lockFileMaintenance": {
     "enabled": true
   },
+  "node": {
+    "supportPolicy": ["lts_latest"]
+  },
   "prCreation": "not-pending",
   "stabilityDays": 3
 }
