--- a/renovate.json
+++ b/renovate.json
@@ -9,6 +9,7 @@
     "enabled": true
   },
   "node": {
+    "enabled": true,
     "supportPolicy": ["lts_latest"]
   },
   "prCreation": "not-pending",
