--- a/renovate.json
+++ b/renovate.json
@@ -4,7 +4,8 @@
     ":rebaseStalePrs",
     ":automergeAll",
     ":masterIssue",
-    ":enableVulnerabilityAlerts"
+    ":enableVulnerabilityAlerts",
+    ":disableRateLimiting"
   ],
   "lockFileMaintenance": {
     "enabled": true
