--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "nodemon": "2.0.4",
     "prettier": "2.1.1",
     "subscriptions-transport-ws": "0.9.18",
-    "supertest": "4.0.2"
+    "supertest": "4.0.2",
+    "typescript": "4.0.2"
   },
   "jest": {
     "collectCoverageFrom": [
