--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/jsonwebtoken": "8.5.0",
     "@types/node": "14.10.0",
     "@types/supertest": "2.0.10",
+    "@types/ws": "7.2.6",
     "chance": "1.1.7",
     "cross-env": "7.0.2",
     "jest": "26.4.2",
