--- a/package.json
+++ b/package.json
@@ -23,17 +23,19 @@
     "test:watch": "npm t -- --watchAll"
   },
   "dependencies": {
-    "@prisma/client": "2.7.1",
+    "@nexus/schema": "0.15.0",
     "bcryptjs": "2.4.3",
     "graphql-yoga": "1.18.3",
-    "jsonwebtoken": "8.5.1"
+    "jsonwebtoken": "8.5.1",
+    "lodash": "4.17.20",
+    "nexus-plugin-prisma": "0.19.0"
   },
   "devDependencies": {
-    "@prisma/cli": "2.7.1",
     "@types/bcryptjs": "2.4.2",
     "@types/chance": "1.1.0",
     "@types/jest": "26.0.14",
     "@types/jsonwebtoken": "8.5.0",
+    "@types/lodash": "4.14.161",
     "@types/node": "14.11.2",
     "@types/supertest": "2.0.10",
     "@types/ws": "7.2.6",
