Delete old resolvers, modify generate script output destination

--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "build": "npm run clean && npm run generate && tsc -p tsconfig.base.json",
     "clean": "rm -rf dist",
     "dev": "cross-env DATABASE_URL=file:./dev.db ts-node-dev --no-notify --respawn --transpile-only src/start.ts",
-    "generate": "prisma generate",
+    "generate": "npm run generate:prisma && npm run generate:nexus",
+    "generate:nexus": "cross-env NODE_ENV=development ts-node --transpile-only src/schema",
+    "generate:prisma": "prisma generate",
     "migrate": "prisma migrate up -c --experimental",
+    "postinstall": "npm run generate",
     "start": "node dist/src/start",
     "test": "cross-env-shell DATABASE_URL=file:./test.db \"npm run migrate && jest -i\"",
     "test:coverage": "npm t -- --coverage",
