--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -6,7 +6,7 @@
     "esModuleInterop": true,
     "lib": ["esnext"],
     "outDir": "dist",
-    "rootDir": "src",
+    // "rootDir": "src",
     "sourceMap": true,
     "strict": true,
     "skipLibCheck": true
